src/test/resources/trialFiles/invalid/semanticErr/overloadNoParam.wacc
begin
  # no parameters
  char f() is
    return 'e'
  end
  string f() is
    return "e"
  end

  skip
end
